--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,8 +5,8 @@
   <absolute-ordering />
 
   <welcome-file-list>
-    <welcome-file>estadoSearch.jsp</welcome-file>
-    <welcome-file>estadoSearch.html</welcome-file>
+    <welcome-file>home.jsp</welcome-file>
+    <welcome-file>home.html</welcome-file>
   </welcome-file-list>
 
   <servlet>
